# grant-mdns-resolver

./: .cproject  .gitmodules  .project  Makefile.am  configure.ac
src/: DNSPacket.cpp  DNSPacket.h  MulticastTransport.cpp  MulticastTransport.h  NetworkTransport.h  main.cpp
src/recordparsers/: RecordParser.h
