AC_INIT([mdns-resolver], [0.1], [sean@seanmadden.net], [mdns], [http://www.seanmadden.net])
AC_PREREQ([2.59])
AC_CONFIG_AUX_DIR([autoconf-boost/build-aux])

AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.10 no-define])

# Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LIBTOOL

# Checks for libraries.
BOOST_REQUIRE([1.47.0])
BOOST_PROGRAM_OPTIONS

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

